--- a/src/main/webapp/createPosition.html
+++ b/src/main/webapp/createPosition.html
@@ -29,6 +29,7 @@
 						<div class="logoDiv"></div>
 					</div>
 					<div class="container">
+					<div ng-include="'menu.html'" class="menuBarStyle"></div>
 						<h2>Create New Position</h2>
 						<form id="integerForm" role="form" class="form-horizontal">
 							<div class="form-group"
