--- a/src/main/webapp/User.html
+++ b/src/main/webapp/User.html
@@ -3,16 +3,6 @@
 <head>
 <meta charset="ISO-8859-1">
 
-<!--<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css">
-<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
- <script type="text/javascript" src="js/cufon-yui.js"></script>
-<script type="text/javascript" src="js/georgia.js"></script>
-<script type="text/javascript" src="js/cuf_run.js"></script>
-<script type="text/javascript" src="js/jquery_1.11.1.js"></script>
-<script type="text/javascript" src="js/angular1.2.min.js"></script> -->
-
-
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/template.css">
@@ -27,16 +17,12 @@
 
 <body class="login-middile-body">
 
-	<!-- <form action="#" name="createUser" onvalidate> -->
-	<div class="siteDiv">
 		<div class="pageDiv">
-			<div class="topLinkDiv"></div>
 			<div class=headerDiv>
 				<div class="logoDiv"></div>
-				<div class="titleDiv"></div>
-				<div class="rightDiv"></div>
 			</div>
 			<div class="container">
+			<div ng-include="'menu.html'" class="menuBarStyle"></div>
 				<body ng-app="" ng-controller="formController">
 					<br>
 					<h2>User Registration form</h2>
