Comminting User based on Name

--- a/src/main/webapp/viewUser.html
+++ b/src/main/webapp/viewUser.html
@@ -28,9 +28,9 @@
 					<div ng-include="'menu.html'" class="menuBarStyle"></div>
 					<h2>Search for Existing User</h2>
 					<div class="form-group">
-						<label for="userId">UserId:</label> <input type="text"
-							name="userId" class="form-control" id="userId"
-							placeholder="Enter User-Id" ng-model="user.userId" name="userId"
+						<label for="name">First Name:</label> <input type="text"
+							name="name" class="form-control" id="name"
+							placeholder="Enter Name" ng-model="user.name" name="name"
 							required>
 					</div>
 
