--- a/src/main/webapp/User.html
+++ b/src/main/webapp/User.html
@@ -33,7 +33,7 @@
 							ng-class="{ 'has-error' : userForm.userId.$invalid && !userForm.userId.$pristine &&! userForm.userId.$required}">
 							<label for="userId">User Id*:</label> <input type="email"
 								name="userId" class="form-control" id="userId"
-								ng-model="user.Id" placeholder="Enter user Id" required>
+								ng-model="user.userId" placeholder="Enter user Id" required>
 							<span
 								ng-show="userForm.userId.$invalid && !userForm.userId.$pristine  "
 								class="help-block">A Valid Email Id Should Be Entered</span> <span
@@ -46,7 +46,7 @@
 							ng-class="{ 'has-error' : userForm.userName.$invalid && !userForm.userName.$pristine }">
 							<label for="userName">Name*:</label> <input type="text"
 								name="userName" class="form-control" id="userName"
-								ng-model="user.Name" placeholder="Enter name"
+								ng-model="user.name" placeholder="Enter name"
 								ng-pattern="/^[a-zA-Z]*$/" required> <span
 								ng-show="userForm.userName.$invalid && !userForm.userName.$pristine && !userForm.userName.$error.userName"
 								class="help-block"> Enter A Valid Name</span> <span
@@ -60,7 +60,7 @@
 							ng-class="{ 'has-error' : userForm.emplyoeeId.$invalid && !userForm.emplyoeeId.$pristine }">
 							<label for="emplyoeeId">Employee Id*:</label> <input
 								type="number" name="emplyoeeId" class="form-control"
-								id="emplyoeeId" ng-model="user.emplyoeeId"
+								id="emplyoeeId" ng-model="user.empId"
 								placeholder="Enter employee Id" required> <span
 								class="help-block"
 								ng-show="userForm.emplyoeeId.$invalid && !userForm.emplyoeeId.$pristine&& !userForm.emplyoeeId.$error.number">A
@@ -87,7 +87,7 @@
 						<div class="form-group"
 							ng-class="{ 'has-error' : userForm.mobileNo.$invalid && !userForm.mobileNo.$pristine }">
 							<label for="mobileNo">Mobile No* :</label> <input type="number"
-								ng-model="user.mobileNo" name="mobileNo" id="mobileNo"
+								ng-model="user.mobileNumber" name="mobileNo" id="mobileNo"
 								ngPattern="1234567890" ng-maxlength="10" class="form-control"
 								placeholder="Enter mobile number" required> <span
 								class="help-block"
