--- a/src/main/webapp/menu.html
+++ b/src/main/webapp/menu.html
@@ -71,12 +71,12 @@ $(function(){
 						<li><a href="User.html" >Edit</a></li>
 						<li><a href="User.html" >View</a></li>
 					</ul></li>
-					<li class="dropdown"><a href="candidate.html" class="dropdown-toggle" 
+					<li class="dropdown"><a href="createCandidate.html" class="dropdown-toggle" 
 					data-toggle="dropdown">Candidate <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="candidate.html" target="_blank">Create New</a></li>
-						<li><a href="candidate.html" target="_blank">Edit</a></li>
-						<li><a href="candidate.html" target="_blank">View</a></li>
+						<li><a href="createCandidate.html" target="_blank">Create New</a></li>
+						<li><a href="createCandidate.html" target="_blank">Edit</a></li>
+						<li><a href="createCandidate.html" target="_blank">View</a></li>
 					</ul></li>
 					<li class="dropdown"><a href="createPosition.html" class="dropdown-toggle" 
 					data-toggle="dropdown">Position <b class="caret"></b></a>
