--- a/src/main/webapp/viewUser.html
+++ b/src/main/webapp/viewUser.html
@@ -23,19 +23,21 @@
 			<div class="pageDiv">
 				<div class=headerDiv>
 					<div class="logoDiv"></div>
+					<div class="rightDiv"><br><h1>Employee Referral Portal</h1></div>
 				</div>
 				<div class="container">
-					<div ng-include="'menu.html'" class="menuBarStyle"></div>
-					<h2>Search for Existing User</h2>
-					<div class="form-group">
+					<div ng-include="'menu.html'" class="menuBarStyle"></div><br>
+					<h2 class ="heading-class">Search for Existing User</h2><br>
+					<div class="control-group">
 						<label for="name">First Name:</label> <input type="text"
 							name="name" class="form-control" id="name"
 							placeholder="Enter Name" ng-model="user.name" name="name"
 							required>
-					</div>
-
+					</div><br>
+					<div class="control-group">
 					<input type="button" class="btn btn-info" ng-click="searchUser()"
 						value="Search" name="get" align="center" />
+						</div>
 				</div>
 				<br>
 				<div class="gridStyle" ng-grid="gridOptions"></div>
