[Abhijeet] Committing unnecessary code

--- a/src/main/webapp/searchCandidate.html
+++ b/src/main/webapp/searchCandidate.html
@@ -19,7 +19,7 @@
 <body class="login-middile-body">
 
 	<div ng-controller="searchCandidateController">
-		<form action="#" name="viewUser" onvalidate>
+		<form action="#" onvalidate>
 			<div class="pageDiv">
 				<div class=headerDiv>
 					<div class="logoDiv"></div>
