--- a/src/main/webapp/searchPosition.html
+++ b/src/main/webapp/searchPosition.html
@@ -19,7 +19,7 @@
 <body class="login-middile-body">
 
 	<div ng-controller="searchPositionController">
-		<form action="#" name="viewUser" onvalidate>
+		<form action="#" onvalidate>
 			<div class="pageDiv">
 				<div class=headerDiv>
 					<div class="logoDiv"></div>
