--- a/src/main/webapp/searchCandidate.html
+++ b/src/main/webapp/searchCandidate.html
@@ -8,8 +8,8 @@
 <script type="text/javascript" src="js/ng-grid-1.3.2.js"></script>
 <link rel="stylesheet" href="css/ng-grid.css" />
 <script type="text/javascript" src="js/searchCandidateController.js"></script>
-<link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<!-- <link rel="stylesheet"
+	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> -->
 <link rel="stylesheet" type="text/css" href="css/template.css">
 <link rel="stylesheet" type="text/css" href="css/home.css">
 
@@ -23,21 +23,28 @@
 			<div class="pageDiv">
 				<div class=headerDiv>
 					<div class="logoDiv"></div>
-					<div class="rightDiv"><br><h1>Employee Referral Portal</h1></div>
+					<div class="rightDiv">
+						<br>
+						<h1>Employee Referral Portal</h1>
+					</div>
 				</div>
 				<div class="container">
-					<div ng-include="'menu.html'" class="menuBarStyle"></div><br>
-					<h2 class="heading-class">Search for Existing Candidate</h2><br>
+					<div ng-include="'menu.html'" class="menuBarStyle"></div>
+					<br>
+					<h2 class="heading-class">Search for Existing Candidate</h2>
+					<br>
 					<div class="control-group">
 						<label for="name">Name:</label> <input type="text"
 							name="candidateName" class="form-control" id="candidateName"
-							placeholder="Enter Name" ng-model="candidate.candidateName" name="candidateName"
-							required>
-					</div><br>
+							placeholder="Enter Name" ng-model="candidate.candidateName"
+							name="candidateName" required>
+					</div>
+					<br>
 					<div class="control-group">
-					<input type="button" class="btn btn-info" ng-click="searchCandidate()"
-						value="Search" name="get" align="center" />
-				</div>
+						<input type="button" class="btn btn-info"
+							ng-click="searchCandidate()" value="Search" name="get"
+							align="center" />
+					</div>
 				</div>
 				<br>
 				<div class="gridStyle control-group" ng-grid="gridOptions"></div>
