Commiting User Role in User Creation Page

--- a/src/main/webapp/User.html
+++ b/src/main/webapp/User.html
@@ -113,11 +113,9 @@
 						<div class="form-group">
 							<label for="name">Role*:</label> <select class="form-control"
 								ng-model="user.roles" name="roles">
-								<option selected="select">Analyst</option>
+								<option selected="select">USER</option>
 								<option>Admin</option>
 								<option>HR</option>
-								<option>SystemAdmin</option>
-								<option>Other</option>
 							</select>
 						</div>
 						<br> 
