Commiting Text Field Chnages

--- a/src/main/webapp/User.html
+++ b/src/main/webapp/User.html
@@ -4,7 +4,7 @@
 <meta charset="ISO-8859-1">
 
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="css/template.css">
 <link rel="stylesheet" type="text/css" href="css/home.css">
 <script type="text/javascript" src="js/UserRegistration.js"></script>
