--- a/src/main/webapp/createUser.html
+++ b/src/main/webapp/createUser.html
@@ -12,11 +12,9 @@ Released for free under a Creative Commons Attribution 3.0 License
 <!-- CuFon: Enables smooth pretty custom font rendering. 100% SEO friendly. To disable, remove this section -->
 
 <script type="text/javascript" src="js/createUser.js"></script>
-<script type="text/javascript" src="js/cufon-yui.js"></script>
-<script type="text/javascript" src="js/georgia.js"></script>
-<script type="text/javascript" src="js/cuf_run.js"></script>
 <script type="text/javascript" src="js/angular1.2.min.js"></script>
 <script type="text/javascript" src="js/jquery_1.11.1.js"></script>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 
 
 
